--- a/Home.css
+++ b/Home.css
@@ -1078,7 +1078,7 @@
 }
 
 .u-section-4 .u-layout-cell-1 {
-  min-height: 586px;
+  min-height: 554px;
   background-image: none;
 }
 
@@ -1108,7 +1108,7 @@
 
 .u-section-4 .u-layout-wrap-2 {
   width: 325px;
-  margin: -554px 0 0 auto;
+  margin: -522px 0 0 auto;
 }
 
 .u-section-4 .u-layout-cell-2 {
@@ -2036,11 +2036,12 @@
 }
 
 .u-section-6 .u-sheet-1 {
-  min-height: 356px;
+  min-height: 334px;
 }
 
 .u-section-6 .u-layout-wrap-1 {
-  margin: 60px auto 60px 0;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .u-section-6 .u-layout-cell-1 {
@@ -2076,8 +2077,7 @@
 }
 
 .u-section-6 .u-icon-1 {
-  height: 100%;
-  color: rgb(0, 0, 0) !important;
+  height: 48px;
 }
 
 .u-section-6 .u-icon-2 {
@@ -2089,7 +2089,7 @@
 }
 
 .u-section-6 .u-icon-4 {
-  color: rgb(0, 0, 0) !important;
+  height: 48px;
 }
 
 .u-section-6 .u-icon-5 {
@@ -2098,12 +2098,7 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 315px;
-  }
-
-  .u-section-6 .u-layout-wrap-1 {
-    margin-right: initial;
-    margin-left: initial;
+    min-height: 293px;
   }
 
   .u-section-6 .u-layout-cell-1 {
@@ -2114,11 +2109,15 @@
     min-height: 195px;
   }
 
+  .u-section-6 .u-icon-1 {
+    color: rgb(0, 0, 0) !important;
+  }
+
   .u-section-6 .u-icon-2 {
     color: rgb(0, 0, 0) !important;
   }
 
-  .u-section-6 .u-icon-3 {
+  .u-section-6 .u-icon-4 {
     color: rgb(0, 0, 0) !important;
   }
 }
@@ -2152,16 +2151,6 @@
     min-height: 517px;
   }
 
-  .u-section-6 .u-layout-wrap-1 {
-    margin-top: 75px;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 191px;
-  }
-
   .u-section-6 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
@@ -2184,10 +2173,6 @@
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
     min-height: 428px;
-  }
-
-  .u-section-6 .u-layout-cell-1 {
-    min-height: 212px;
   }
 
   .u-section-6 .u-layout-cell-2 {
