--- a/Home.css
+++ b/Home.css
@@ -138,14 +138,11 @@
   }
 } .u-section-2 {
   background-image: linear-gradient(#e5bace, #545af8);
-  min-height: 1179px;
+  min-height: 1163px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 2.25rem;
-  background-image: none;
-  font-weight: normal;
-  margin: 33px calc(((100% - 1140px) / 2) + 40px) 0 calc(((100% - 1140px) / 2) + 364px);
+  margin: 33px 50px 0;
 }
 
 .u-section-2 .u-shape-1 {
@@ -302,7 +299,7 @@
   width: 269px;
   background-image: none;
   min-height: 52px;
-  margin: 0 calc(((100% - 1140px) / 2) + 6px) 53px auto;
+  margin: 0 calc(((100% - 1140px) / 2) + 6px) 33px auto;
 }
 
 .u-section-2 .u-container-layout-6 {
@@ -319,8 +316,9 @@
   }
 
   .u-section-2 .u-text-1 {
+    font-weight: normal;
     margin-right: calc(((100% - 940px) / 2));
-    margin-left: calc(((100% - 940px) / 2) + 204px);
+    margin-left: 0;
   }
 
   .u-section-2 .u-image-1 {
@@ -387,7 +385,7 @@
 
   .u-section-2 .u-group-1 {
     width: 720px;
-    margin-top: 9px;
+    margin-top: -8px;
   }
 
   .u-section-2 .u-layout-wrap-1 {
@@ -427,7 +425,6 @@
   }
 
   .u-section-2 .u-text-8 {
-    margin-top: 30px;
     margin-right: calc(((100% - 720px) / 2));
     margin-left: calc(((100% - 720px) / 2) + 525px);
   }
@@ -455,6 +452,7 @@
 
   .u-section-2 .u-group-1 {
     width: 540px;
+    margin-top: 132px;
   }
 
   .u-section-2 .u-container-layout-1 {
@@ -535,24 +533,17 @@
   }
 
   .u-section-2 .u-text-1 {
-    font-size: 1.5rem;
     margin-top: 14px;
-  }
-
-  .u-section-2 .u-shape-1 {
-    margin-top: 98px;
   }
 
   .u-section-2 .u-image-1 {
     width: 340px;
     height: 191px;
-    margin-top: -381px;
     margin-right: calc(((100% - 340px) / 2));
   }
 
   .u-section-2 .u-group-1 {
     min-height: 94px;
-    margin-top: -30px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -605,9 +596,7 @@
   }
 
   .u-section-2 .u-group-2 {
-    margin-top: 13px;
     margin-right: auto;
-    margin-bottom: 37px;
   }
 } .u-section-3 {
   background-image: linear-gradient(#545af8, #afccc2);
@@ -719,7 +708,7 @@
 }
 
 .u-section-3 .u-text-6 {
-  margin: 20px 0 0;
+  margin: 19px 0 0;
 }
 
 .u-section-3 .u-list-item-2 {
@@ -738,7 +727,7 @@
 }
 
 .u-section-3 .u-text-8 {
-  margin: 20px 0 0;
+  margin: 19px 0 0;
 }
 
 .u-section-3 .u-list-item-3 {
@@ -757,7 +746,7 @@
 }
 
 .u-section-3 .u-text-10 {
-  margin: 20px 0 0;
+  margin: 19px 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -1066,67 +1055,194 @@
   transform: rotate(0deg) scale(1) translateX(0px) translateY(0px) !important;
 } .u-section-4 {
   background-image: linear-gradient(#afccc2, #ffea99);
+  min-height: 1109px;
 }
 
-.u-section-4 .u-sheet-1 {
-  min-height: 1046px;
+.u-section-4 .u-group-1 {
+  width: 482px;
+  min-height: 75px;
+  height: auto;
+  margin: 19px auto 0 calc(((100% - 1140px) / 2) + 329px);
+}
+
+.u-section-4 .u-container-layout-1 {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.u-section-4 .u-text-1 {
+  margin: 0;
+}
+
+.u-section-4 .u-shape-1 {
+  height: 152px;
+  margin-top: 796px;
+  margin-bottom: 0;
+  background-image: none;
+}
+
+.u-section-4 .u-list-1 {
+  width: 375px;
+  height: auto;
+  min-height: 723px;
+  margin: -917px auto 0 calc(((100% - 1140px) / 2) + 383px);
+}
+
+.u-section-4 .u-repeater-1 {
+  grid-gap: 45px 45px;
+  grid-template-columns: 100%;
+  min-height: 723px;
+}
+
+.u-section-4 .u-list-item-1 {
+  background-image: linear-gradient(to right, #ffea99, #ef7daf);
+}
+
+.u-section-4 .u-container-layout-2 {
+  padding: 10px;
+}
+
+.u-section-4 .u-list-item-2 {
+  background-image: linear-gradient(to right, #ef7daf, #ffea99);
+}
+
+.u-section-4 .u-container-layout-3 {
+  padding: 10px;
+}
+
+.u-section-4 .u-list-item-3 {
+  background-image: linear-gradient(to right, #ffea99, #ef7daf);
+}
+
+.u-section-4 .u-container-layout-4 {
+  padding: 10px;
+}
+
+.u-section-4 .u-list-item-4 {
+  background-image: linear-gradient(to right, #ffea99, #ef7daf);
+}
+
+.u-section-4 .u-container-layout-5 {
+  padding: 10px;
+}
+
+.u-section-4 .u-list-item-5 {
+  background-image: linear-gradient(to right, #ef7daf, #ffea99);
+}
+
+.u-section-4 .u-container-layout-6 {
+  padding: 10px;
+}
+
+.u-section-4 .u-list-item-6 {
+  background-image: linear-gradient(to right, #ffea99, #ef7daf);
+}
+
+.u-section-4 .u-container-layout-7 {
+  padding: 10px;
+}
+
+.u-section-4 .u-image-1 {
+  object-position: 50% 2.21%;
+  width: 375px;
+  height: 750px;
+  margin: -708px auto 0 calc(((100% - 1140px) / 2) + 383px);
 }
 
 .u-section-4 .u-layout-wrap-1 {
   width: 325px;
-  margin: 47px auto 0 0;
+  margin: -224px auto 0 calc(((100% - 1140px) / 2));
 }
 
 .u-section-4 .u-layout-cell-1 {
-  min-height: 554px;
+  min-height: 408px;
   background-image: none;
 }
 
-.u-section-4 .u-container-layout-1 {
+.u-section-4 .u-container-layout-8 {
   padding: 0;
 }
 
 .u-section-4 .u-icon-1 {
-  height: 74px;
-  width: 75px;
-  margin: 17px auto 0;
-  padding: 10px;
-}
-
-.u-section-4 .u-text-1 {
-  text-transform: none;
-  letter-spacing: normal;
-  width: 221px;
-  margin: 15px auto 0;
+  width: 64px;
+  height: 64px;
+  margin: 24px auto 0;
 }
 
 .u-section-4 .u-text-2 {
+  width: 259px;
+  margin: 17px auto 0;
+}
+
+.u-section-4 .u-text-3 {
   font-style: italic;
+  line-height: 1.6;
   font-size: 1.25rem;
-  margin: 26px 0 0;
+  margin: 19px 0 0;
 }
 
 .u-section-4 .u-layout-wrap-2 {
   width: 325px;
-  margin: -522px 0 0 auto;
+  margin: -376px calc(((100% - 1140px) / 2)) 0 auto;
 }
 
 .u-section-4 .u-layout-cell-2 {
-  min-height: 553px;
+  min-height: 408px;
 }
 
-.u-section-4 .u-container-layout-2 {
+.u-section-4 .u-container-layout-9 {
   padding: 0;
 }
 
 .u-section-4 .u-icon-2 {
+  width: 64px;
+  height: 64px;
+  margin: 24px 125px 0 auto;
+}
+
+.u-section-4 .u-text-4 {
+  text-transform: none;
+  letter-spacing: normal;
+  margin: 17px 0 0;
+}
+
+.u-section-4 .u-text-5 {
+  margin: 17px 22px 0;
+}
+
+.u-section-4 .u-btn-1 {
+  border-style: solid;
+  font-weight: 700;
+  text-transform: uppercase;
+  font-size: 1.125rem;
+  letter-spacing: 1px;
+  background-image: none;
+  align-self: center;
+  margin: -104px auto 0;
+  padding: 11px 80px 12px 79px;
+}
+
+.u-section-4 .u-layout-wrap-3 {
+  width: 325px;
+  margin: -869px calc(((100% - 1140px) / 2)) 0 auto;
+}
+
+.u-section-4 .u-layout-cell-3 {
+  min-height: 553px;
+}
+
+.u-section-4 .u-container-layout-10 {
+  padding: 0;
+}
+
+.u-section-4 .u-icon-3 {
   height: 75px;
   width: 75px;
   margin: 18px auto 0;
   padding: 8px;
 }
 
-.u-section-4 .u-text-3 {
+.u-section-4 .u-text-6 {
   text-transform: none;
   letter-spacing: normal;
   margin: 14px 0 0;
@@ -1212,179 +1328,84 @@
   height: 46px;
 }
 
-.u-section-4 .u-btn-1 {
-  border-style: solid;
-  font-weight: 700;
-  text-transform: uppercase;
-  font-size: 1.125rem;
-  letter-spacing: 1px;
-  background-image: none;
-  align-self: center;
-  margin: -504px auto 0;
-  padding: 10px 24px 12px 23px;
-}
-
-.u-section-4 .u-list-1 {
-  width: 375px;
-  margin: 53px auto 0;
-}
-
-.u-section-4 .u-repeater-1 {
-  grid-gap: 45px 45px;
-  grid-template-columns: 100%;
-  min-height: 723px;
-}
-
-.u-section-4 .u-list-item-1 {
-  background-image: linear-gradient(to right, #ffea99, #ef7daf);
-}
-
-.u-section-4 .u-container-layout-3 {
-  padding: 10px;
-}
-
-.u-section-4 .u-list-item-2 {
-  background-image: linear-gradient(to right, #ef7daf, #ffea99);
-}
-
-.u-section-4 .u-container-layout-4 {
-  padding: 10px;
-}
-
-.u-section-4 .u-list-item-3 {
-  background-image: linear-gradient(to right, #ffea99, #ef7daf);
-}
-
-.u-section-4 .u-container-layout-5 {
-  padding: 10px;
-}
-
-.u-section-4 .u-list-item-4 {
-  background-image: linear-gradient(to right, #ffea99, #ef7daf);
-}
-
-.u-section-4 .u-container-layout-6 {
-  padding: 10px;
-}
-
-.u-section-4 .u-list-item-5 {
-  background-image: linear-gradient(to right, #ef7daf, #ffea99);
-}
-
-.u-section-4 .u-container-layout-7 {
-  padding: 10px;
-}
-
-.u-section-4 .u-list-item-6 {
-  background-image: linear-gradient(to right, #ffea99, #ef7daf);
-}
-
-.u-section-4 .u-container-layout-8 {
-  padding: 10px;
-}
-
-.u-section-4 .u-image-1 {
-  object-position: 50% 2.21%;
-  width: 375px;
-  height: 750px;
-  margin: -708px auto 0;
-}
-
-.u-section-4 .u-layout-wrap-3 {
-  width: 325px;
-  margin: -375px 0 0 auto;
-}
-
-.u-section-4 .u-layout-cell-3 {
-  min-height: 408px;
-}
-
-.u-section-4 .u-container-layout-9 {
-  padding: 0;
-}
-
-.u-section-4 .u-icon-3 {
-  width: 64px;
-  height: 64px;
-  margin: 24px 125px 0 auto;
-}
-
-.u-section-4 .u-text-4 {
-  text-transform: none;
-  letter-spacing: normal;
-  margin: 17px 0 0;
-}
-
-.u-section-4 .u-text-5 {
-  margin: 17px 22px 0;
-}
-
 .u-section-4 .u-layout-wrap-4 {
   width: 325px;
-  margin: -376px auto 47px 0;
+  margin: -519px auto 0 calc(((100% - 1140px) / 2));
 }
 
 .u-section-4 .u-layout-cell-4 {
-  min-height: 408px;
+  min-height: 554px;
   background-image: none;
 }
 
-.u-section-4 .u-container-layout-10 {
+.u-section-4 .u-container-layout-11 {
   padding: 0;
 }
 
 .u-section-4 .u-icon-4 {
-  width: 64px;
-  height: 64px;
-  margin: 24px auto 0;
-}
-
-.u-section-4 .u-text-6 {
-  width: 259px;
-  margin: 17px auto 0;
+  height: 74px;
+  width: 75px;
+  margin: -3px auto 0;
+  padding: 10px;
 }
 
 .u-section-4 .u-text-7 {
+  text-transform: none;
+  letter-spacing: normal;
+  width: 221px;
+  margin: 15px auto 0;
+}
+
+.u-section-4 .u-text-8 {
   font-style: italic;
-  line-height: 1.6;
   font-size: 1.25rem;
-  margin: 19px 0 0;
+  margin: -370px calc(((100% - 1140px) / 2) + 815px) 60px calc(((100% - 1140px) / 2));
 }
 
 @media (max-width: 1199px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 1425px;
+  .u-section-4 .u-group-1 {
+    margin-left: calc(((100% - 940px) / 2) + 329px);
+    height: auto;
+  }
+
+  .u-section-4 .u-shape-1 {
+    margin-top: 930px;
+  }
+
+  .u-section-4 .u-list-1 {
+    margin-top: -1034px;
+    margin-left: calc(((100% - 940px) / 2) + 383px);
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-left: calc(((100% - 940px) / 2) + 383px);
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    width: 450px;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 561px;
-  }
-
-  .u-section-4 .u-text-1 {
-    width: 172px;
+    margin-left: calc(((100% - 940px) / 2));
   }
 
   .u-section-4 .u-text-2 {
-    width: 314px;
-    margin-top: 23px;
-    margin-left: auto;
-    margin-right: auto;
+    width: 172px;
   }
 
   .u-section-4 .u-layout-wrap-2 {
-    width: 450px;
-    margin-top: -529px;
+    margin-right: calc(((100% - 940px) / 2));
   }
 
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 561px;
+  .u-section-4 .u-icon-2 {
+    margin-right: auto;
   }
 
-  .u-section-4 .u-text-3 {
+  .u-section-4 .u-btn-1 {
+    padding: 6px 64px 7px 63px;
+  }
+
+  .u-section-4 .u-layout-wrap-3 {
+    margin-right: calc(((100% - 940px) / 2));
+  }
+
+  .u-section-4 .u-text-6 {
     width: auto;
   }
 
@@ -1392,234 +1413,153 @@
     width: 358px;
   }
 
-  .u-section-4 .u-btn-1 {
-    margin-top: 739px;
-    margin-left: 0;
-    padding: 6px 64px 7px 63px;
-  }
-
-  .u-section-4 .u-list-1 {
-    margin-top: -795px;
-    margin-right: 38px;
-  }
-
-  .u-section-4 .u-image-1 {
-    margin-top: -678px;
-    margin-right: 38px;
-  }
-
-  .u-section-4 .u-layout-wrap-3 {
-    width: 450px;
-    margin-top: -795px;
-    margin-right: auto;
-    margin-left: 0;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 342px;
-  }
-
-  .u-section-4 .u-icon-3 {
-    margin-right: auto;
-  }
-
   .u-section-4 .u-layout-wrap-4 {
-    width: 450px;
-    margin-top: 18px;
-    margin-bottom: 60px;
+    margin-left: calc(((100% - 940px) / 2));
   }
 
-  .u-section-4 .u-layout-cell-4 {
-    min-height: 406px;
-  }
-
-  .u-section-4 .u-text-6 {
-    width: 172px;
+  .u-section-4 .u-text-8 {
+    margin-right: calc(((100% - 940px) / 2) + 615px);
+    margin-left: calc(((100% - 940px) / 2));
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 1395px;
+  .u-section-4 .u-group-1 {
+    margin-left: calc(((100% - 750px) / 2) + 268px);
+  }
+
+  .u-section-4 .u-shape-1 {
+    margin-top: 426px;
+  }
+
+  .u-section-4 .u-list-1 {
+    margin-top: -530px;
+    margin-left: calc(((100% - 750px) / 2) + 375px);
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-left: calc(((100% - 750px) / 2) + 375px);
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    width: 345px;
-    margin-top: 0;
+    margin-top: -631px;
+    margin-left: calc(((100% - 750px) / 2));
   }
 
   .u-section-4 .u-layout-cell-1 {
-    min-height: 554px;
-  }
-
-  .u-section-4 .u-text-2 {
-    width: 313px;
+    min-height: 100px;
   }
 
   .u-section-4 .u-layout-wrap-2 {
-    width: 345px;
-    margin-top: -522px;
+    margin-right: calc(((100% - 750px) / 2));
   }
 
   .u-section-4 .u-layout-cell-2 {
-    min-height: 554px;
-  }
-
-  .u-section-4 .u-table-1 {
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    min-height: 100px;
   }
 
   .u-section-4 .u-btn-1 {
-    margin-top: 744px;
     padding-right: 12px;
     padding-left: 11px;
   }
 
-  .u-section-4 .u-list-1 {
-    height: auto;
-    min-height: 723px;
-    margin-right: 0;
-    margin-left: 375px;
-  }
-
-  .u-section-4 .u-image-1 {
-    margin-right: 0;
-    margin-left: 375px;
-  }
-
   .u-section-4 .u-layout-wrap-3 {
-    width: 345px;
-    margin-top: -805px;
+    margin-top: -365px;
+    margin-right: calc(((100% - 750px) / 2));
   }
 
   .u-section-4 .u-layout-cell-3 {
-    min-height: 357px;
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-table-1 {
+    width: 303px;
   }
 
   .u-section-4 .u-layout-wrap-4 {
-    width: 345px;
-    margin-top: 13px;
+    margin-left: calc(((100% - 750px) / 2));
   }
 
   .u-section-4 .u-layout-cell-4 {
-    min-height: 407px;
+    min-height: 100px;
+  }
+
+  .u-section-4 .u-text-8 {
+    margin-right: calc(((100% - 750px) / 2) + 425px);
+    margin-left: calc(((100% - 750px) / 2));
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 2523px;
+  .u-section-4 .u-group-1 {
+    margin-left: calc(((100% - 500px) / 2) + 18px);
+  }
+
+  .u-section-4 .u-container-layout-1 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .u-section-4 .u-shape-1 {
+    margin-top: 427px;
+  }
+
+  .u-section-4 .u-list-1 {
+    margin-top: -531px;
+    margin-left: calc(((100% - 500px) / 2) + 125px);
+  }
+
+  .u-section-4 .u-image-1 {
+    margin-left: calc(((100% - 500px) / 2) + 125px);
   }
 
   .u-section-4 .u-layout-wrap-1 {
-    width: 375px;
-    margin-top: 1px;
-    margin-left: auto;
-  }
-
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 525px;
+    margin-left: calc(((100% - 500px) / 2));
   }
 
   .u-section-4 .u-layout-wrap-2 {
-    width: 375px;
-    margin-top: 1466px;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-layout-cell-2 {
-    min-height: 568px;
+    margin-right: calc(((100% - 500px) / 2));
   }
 
   .u-section-4 .u-btn-1 {
-    margin-top: -1587px;
-    margin-left: auto;
     padding-right: 27px;
     padding-bottom: 8px;
     padding-left: 26px;
   }
 
-  .u-section-4 .u-list-1 {
-    margin-top: 26px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  .u-section-4 .u-image-1 {
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .u-section-4 .u-layout-wrap-3 {
-    width: 375px;
-    margin-top: -205px;
-    margin-left: auto;
-  }
-
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 370px;
+    margin-top: -366px;
+    margin-right: calc(((100% - 500px) / 2));
   }
 
   .u-section-4 .u-layout-wrap-4 {
-    width: 375px;
-    margin-top: -1422px;
-    margin-left: auto;
+    margin-left: calc(((100% - 500px) / 2));
   }
 
-  .u-section-4 .u-layout-cell-4 {
-    min-height: 397px;
+  .u-section-4 .u-text-8 {
+    margin-right: calc(((100% - 500px) / 2) + 175px);
+    margin-left: calc(((100% - 500px) / 2));
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-4 .u-sheet-1 {
-    min-height: 2489px;
+   .u-section-4 {
+    min-height: 1039px;
   }
 
-  .u-section-4 .u-layout-wrap-1 {
-    margin-top: 0;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-4 .u-group-1 {
+    width: 340px;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
-  .u-section-4 .u-layout-cell-1 {
-    min-height: 561px;
-  }
-
-  .u-section-4 .u-layout-wrap-2 {
-    margin-top: 1401px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-4 .u-icon-2 {
-    margin-top: 36px;
-  }
-
-  .u-section-4 .u-table-1 {
-    margin-top: 11px;
-    margin-bottom: -43px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
-  }
-
-  .u-section-4 .u-btn-1 {
-    margin-top: -1535px;
-    margin-left: 0;
-    margin-right: 0;
-    padding: 4px 9px 4px 8px;
+  .u-section-4 .u-shape-1 {
+    margin-top: 385px;
   }
 
   .u-section-4 .u-list-1 {
-    margin-top: 36px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 340px;
+    margin-top: -489px;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
   .u-section-4 .u-list-item-1 {
@@ -1653,22 +1593,18 @@
   }
 
   .u-section-4 .u-image-1 {
+    width: 340px;
     height: 680px;
-    margin-top: -736px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
-  .u-section-4 .u-layout-wrap-3 {
-    margin-top: -117px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+  .u-section-4 .u-layout-wrap-1 {
+    margin-top: -597px;
+    margin-left: calc(((100% - 340px) / 2));
   }
 
-  .u-section-4 .u-layout-cell-3 {
-    min-height: 363px;
+  .u-section-4 .u-layout-wrap-2 {
+    margin-right: calc(((100% - 340px) / 2));
   }
 
   .u-section-4 .u-text-5 {
@@ -1676,11 +1612,31 @@
     margin-right: 5px;
   }
 
+  .u-section-4 .u-btn-1 {
+    padding: 4px 9px 4px 8px;
+  }
+
+  .u-section-4 .u-layout-wrap-3 {
+    margin-top: -324px;
+    margin-right: calc(((100% - 340px) / 2));
+  }
+
+  .u-section-4 .u-icon-3 {
+    margin-top: 36px;
+  }
+
+  .u-section-4 .u-table-1 {
+    margin-top: 11px;
+    margin-bottom: -43px;
+  }
+
   .u-section-4 .u-layout-wrap-4 {
-    margin-top: -1375px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    margin-left: calc(((100% - 340px) / 2));
+  }
+
+  .u-section-4 .u-text-8 {
+    margin-right: calc(((100% - 340px) / 2) + 15px);
+    margin-left: calc(((100% - 340px) / 2));
   }
 } .u-section-5 {
   background-image: linear-gradient(#ffea99, #edeefe);
