--- a/Home.css
+++ b/Home.css
@@ -1061,7 +1061,6 @@
 .u-section-4 .u-group-1 {
   width: 482px;
   min-height: 75px;
-  height: auto;
   margin: 19px auto 0 calc(((100% - 1140px) / 2) + 329px);
 }
 
@@ -1083,8 +1082,6 @@
 
 .u-section-4 .u-list-1 {
   width: 375px;
-  height: auto;
-  min-height: 723px;
   margin: -917px auto 0 calc(((100% - 1140px) / 2) + 383px);
 }
 
@@ -1365,7 +1362,6 @@
 @media (max-width: 1199px) {
   .u-section-4 .u-group-1 {
     margin-left: calc(((100% - 940px) / 2) + 329px);
-    height: auto;
   }
 
   .u-section-4 .u-shape-1 {
@@ -1373,6 +1369,7 @@
   }
 
   .u-section-4 .u-list-1 {
+    height: auto;
     margin-top: -1034px;
     margin-left: calc(((100% - 940px) / 2) + 383px);
   }
@@ -1992,36 +1989,36 @@
 }
 
 .u-section-6 .u-sheet-1 {
-  min-height: 334px;
+  min-height: 388px;
+}
+
+.u-section-6 .u-image-1 {
+  width: 346px;
+  height: 346px;
+  object-position: 100% 50%;
+  margin: 21px 107px 0 auto;
 }
 
 .u-section-6 .u-layout-wrap-1 {
-  margin-top: 30px;
-  margin-bottom: 30px;
+  width: 570px;
+  margin: -336px auto 21px 0;
 }
 
 .u-section-6 .u-layout-cell-1 {
-  min-height: 169px;
+  min-height: 436px;
 }
 
 .u-section-6 .u-container-layout-1 {
-  padding: 30px 60px;
+  padding: 0 56px;
 }
 
 .u-section-6 .u-text-1 {
-  margin: 0 auto 0 0;
+  background-image: none;
+  margin: 0 auto;
 }
 
 .u-section-6 .u-text-2 {
   margin: 20px 0 0;
-}
-
-.u-section-6 .u-layout-cell-2 {
-  min-height: 236px;
-}
-
-.u-section-6 .u-container-layout-2 {
-  padding: 30px 42px;
 }
 
 .u-section-6 .u-social-icons-1 {
@@ -2029,7 +2026,7 @@
   min-height: 16px;
   width: 320px;
   min-width: 160px;
-  margin: 0 auto;
+  margin: 44px auto 0;
 }
 
 .u-section-6 .u-icon-1 {
@@ -2054,15 +2051,16 @@
 
 @media (max-width: 1199px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 293px;
+    min-height: 808px;
+  }
+
+  .u-section-6 .u-layout-wrap-1 {
+    margin-top: -417px;
+    width: 470px;
   }
 
   .u-section-6 .u-layout-cell-1 {
-    min-height: 139px;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 195px;
+    min-height: 380px;
   }
 
   .u-section-6 .u-icon-1 {
@@ -2080,7 +2078,7 @@
 
 @media (max-width: 991px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 269px;
+    min-height: 548px;
   }
 
   .u-section-6 .u-layout-cell-1 {
@@ -2091,57 +2089,27 @@
     padding-left: 30px;
     padding-right: 30px;
   }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 149px;
-  }
-
-  .u-section-6 .u-container-layout-2 {
-    padding-left: 30px;
-    padding-right: 30px;
-  }
 }
 
 @media (max-width: 767px) {
-  .u-section-6 .u-sheet-1 {
-    min-height: 517px;
-  }
-
   .u-section-6 .u-container-layout-1 {
     padding-left: 10px;
     padding-right: 10px;
-  }
-
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 46px;
-  }
-
-  .u-section-6 .u-container-layout-2 {
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-
-  .u-section-6 .u-social-icons-1 {
-    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-6 .u-sheet-1 {
-    min-height: 428px;
+    min-height: 460px;
   }
 
-  .u-section-6 .u-layout-cell-2 {
-    min-height: 120px;
+  .u-section-6 .u-image-1 {
+    width: 340px;
+    height: 340px;
+    margin-right: 0;
   }
 
-  .u-section-6 .u-container-layout-2 {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  .u-section-6 .u-social-icons-1 {
-    height: 44px;
-    width: 298px;
+  .u-section-6 .u-layout-wrap-1 {
+    width: 340px;
   }
 }
